Fix card spacing so they are uniform, add trigger warning to welcome section

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -129,6 +129,33 @@ header {
   height: 10rem;
   border: none;
 }
+
+/* Cards */
+#issues .col-12,
+#issues .col-md-6,
+#issues .col-lg-4 {
+  display: flex;
+  margin-bottom: 1.5rem;
+}
+.card {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 0;
+}
+.card-body {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+}
+.card-text {
+  flex: 1;
+  margin-bottom: 1rem;
+}
+.btn {
+  margin-top: auto;
+}
+
 /* Issues */
 .modal-footer {
   justify-content: center;
